sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value ecart
  ecart=getValuCount()
  ^AlgCombSort:4: error: reassignment to val
  echange=true
         ^AlgCombSort:6: error: not found: value ecart
    if (ecart>1){
        ^AlgCombSort:7: error: not found: value ecart
      ecart=(ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
      ^AlgCombSort:10: error: not found: value ecart
    while (i+ecart<getValueCount()){
             ^AlgCombSort:11: error: not found: value k
      if (!isSmaller(k,k+1)){
                     ^AlgCombSort:11: error: not found: value k
      if (!isSmaller(k,k+1)){
                       ^AlgCombSort:12: error: not found: value k
        swap(k+1,k)
             ^AlgCombSort:12: error: not found: value k
        swap(k+1,k)
                 ^AlgCombSort:14: error: missing arguments for method echange in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
        echange==false
        ^AlgCombSort:18: error: not found: value ecart
  }while (ecart >1 || echange==true)
          ^AlgCombSort:18: error: missing arguments for method echange in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
  }while (ecart >1 || echange==true)
                      ^